--- a/userChrome4win.css
+++ b/userChrome4win.css
@@ -1,206 +1,3 @@
-/* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/hide_tabs_toolbar.css made available under Mozilla Public License v. 2.0
-See the above repository for updates as well as full license text. */
-
-/* Hides tabs toolbar */
-/* For OSX use hide_tabs_toolbar_osx.css instead */
-
-/* Note, if you have either native titlebar or menubar enabled, then you don't really need this style.
- * In those cases you can just use: #TabsToolbar{ visibility: collapse !important }
- */
-
-/* IMPORTANT */
-/*
-Get window_control_placeholder_support.css
-Window controls will be all wrong without it
-*/
-
-:root[tabsintitlebar]{ --uc-toolbar-height: 40px; }
-:root[tabsintitlebar][uidensity="compact"]{ --uc-toolbar-height: 32px }
-#titlebar{
-  will-change: unset !important;
-  transition: none !important;
-  opacity: 1 !important;
-}
-#TabsToolbar{ visibility: collapse !important }
-
-:root[sizemode="fullscreen"] #TabsToolbar > :is(#window-controls,.titlebar-buttonbox-container){
-  visibility: visible !important;
-  z-index: 2;
-}
-
-:root:not([inFullscreen]) #nav-bar{
-  margin-top: calc(0px - var(--uc-toolbar-height,0px));
-}
-
-:root[tabsintitlebar] #toolbar-menubar[autohide="true"]{
-  min-height: unset !important;
-  height: var(--uc-toolbar-height,0px) !important;
-  position: relative;
-}
-
-#toolbar-menubar[autohide="false"]{
-  margin-bottom: var(--uc-toolbar-height,0px)
-}
-
-:root[tabsintitlebar] #toolbar-menubar[autohide="true"] #main-menubar{
-  flex-grow: 1;
-  align-items: stretch;
-  background-color: var(--toolbar-bgcolor,--toolbar-non-lwt-bgcolor);
-  background-clip: padding-box;
-  border-right: 30px solid transparent;
-  border-image: linear-gradient(to left, transparent, var(--toolbar-bgcolor,--toolbar-non-lwt-bgcolor) 30px) 20 / 30px
-}
-
-#toolbar-menubar:not([inactive]){ z-index: 2 }
-#toolbar-menubar[autohide="true"][inactive] > #menubar-items {
-  opacity: 0;
-  pointer-events: none;
-  margin-left: var(--uc-window-drag-space-pre,0px)
-}
-
-
-/* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/window_control_placeholder_support.css made available under Mozilla Public License v. 2.0
-See the above repository for updates as well as full license text. */
-
-/* Creates placeholders for window controls */
-/* This is a supporting file used by other stylesheets */
-
-/* This stylesheet is pretty much unnecessary if window titlebar is enabled */
-
-/* This file should preferably be imported before other stylesheets */
-
-/* Defaults for window controls on RIGHT side of the window */
-/* Modify these values to match your preferences */
-:root:is([tabsintitlebar], [sizemode="fullscreen"]) {
-    --uc-window-control-width: 138px;
-    /* Space reserved for window controls (Win10) */
-    /* Extra space reserved on both sides of the nav-bar to be able to drag the window */
-    --uc-window-drag-space-pre: 30px;
-    /* left side*/
-    --uc-window-drag-space-post: 30px;
-    /* right side*/
-}
-
-:root:is([tabsintitlebar][sizemode="maximized"], [sizemode="fullscreen"]) {
-    --uc-window-drag-space-pre: 0px;
-    /* Remove pre space */
-}
-
-@media (-moz-platform: windows-win7),
-(-moz-platform: windows-win8) {
-    :root:is([tabsintitlebar], [sizemode="fullscreen"]) {
-        --uc-window-control-width: 105px;
-    }
-}
-
-@media (-moz-gtk-csd-available) {
-    :root:is([tabsintitlebar], [sizemode="fullscreen"]) {
-        --uc-window-control-width: 84px;
-    }
-}
-
-@media (-moz-platform: macos) {
-    :root:is([tabsintitlebar], [sizemode="fullscreen"]) {
-        --uc-window-control-width: 72px;
-    }
-}
-
-.titlebar-buttonbox,
-#window-controls {
-    color: var(--toolbar-color)
-}
-
-:root[sizemode="fullscreen"] .titlebar-buttonbox-container {
-    display: none
-}
-
-:root[sizemode="fullscreen"] #navigator-toolbox {
-    position: relative;
-}
-
-:root[sizemode="fullscreen"] #TabsToolbar>.titlebar-buttonbox-container:last-child,
-:root[sizemode="fullscreen"] #window-controls {
-    position: absolute;
-    display: flex;
-    top: 0;
-    right: 0;
-    height: 40px;
-}
-
-:root[sizemode="fullscreen"] #TabsToolbar>.titlebar-buttonbox-container:last-child,
-:root[uidensity="compact"][sizemode="fullscreen"] #window-controls {
-    height: 32px
-}
-
-#nav-bar {
-    border-inline: var(--uc-window-drag-space-pre, 0px) solid transparent;
-    border-inline-style: solid !important;
-    border-right-width: calc(var(--uc-window-control-width, 0px) + var(--uc-window-drag-space-post, 0px));
-    background-clip: border-box !important;
-}
-
-/* Rules for window controls on left layout */
-@media (-moz-bool-pref: "userchrome.force-window-controls-on-left.enabled"),
-(-moz-gtk-csd-reversed-placement),
-(-moz-platform: macos) {
-    :root[tabsintitlebar="true"] #nav-bar {
-        border-inline-width: calc(var(--uc-window-control-width, 0px) + var(--uc-window-drag-space-post, 0px)) var(--uc-window-drag-space-pre, 0px)
-    }
-
-    :root[sizemode="fullscreen"] #TabsToolbar>.titlebar-buttonbox-container:last-child,
-    :root[sizemode="fullscreen"] #window-controls {
-        right: unset
-    }
-}
-
-@media (-moz-bool-pref: "userchrome.force-window-controls-on-left.enabled") {
-    .titlebar-buttonbox-container {
-        order: -1 !important;
-    }
-
-    .titlebar-buttonbox {
-        flex-direction: row-reverse;
-    }
-}
-
-/* This pref can be used to force window controls on left even if that is not normal behavior on your OS */
-@supports -moz-bool-pref("userchrome.force-window-controls-on-left.enabled") {
-    :root[tabsintitlebar="true"] #nav-bar {
-        border-inline-width: calc(var(--uc-window-control-width, 0px) + var(--uc-window-drag-space-post, 0px)) var(--uc-window-drag-space-pre, 0px)
-    }
-
-    :root[sizemode="fullscreen"] #TabsToolbar>.titlebar-buttonbox-container:last-child,
-    :root[sizemode="fullscreen"] #window-controls {
-        right: unset;
-    }
-
-    .titlebar-buttonbox-container {
-        order: -1 !important;
-    }
-
-    .titlebar-buttonbox {
-        flex-direction: row-reverse;
-    }
-}
-
-/**
- * Decrease size of the sidebar header
- */
-#sidebar-header {
-    font-size: 1.2em !important;
-    padding: 2px 6px 2px 3px !important;
-}
-
-#sidebar-header #sidebar-close {
-    padding: 3px !important;
-}
-
-#sidebar-header #sidebar-close .toolbarbutton-icon {
-    width: 14px !important;
-    height: 14px !important;
-    opacity: 0.6 !important;
-}
-
 /* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/autohide_sidebar.css made available under Mozilla Public License v. 2.0
 See the above repository for updates as well as full license text. */
 
@@ -209,24 +6,24 @@ See the above repository for updates as well as full license text. */
 
 #sidebar-box{
   --uc-sidebar-width: 40px;
-  --uc-sidebar-hover-width: 240px;
+  --uc-sidebar-hover-width: 210px;
   --uc-autohide-sidebar-delay: 600ms; /* Wait 0.6s before hiding sidebar */
   --uc-autohide-transition-duration: 115ms;
   --uc-autohide-transition-type: linear;
+  --browser-area-z-index-sidebar: 3;
   position: relative;
   min-width: var(--uc-sidebar-width) !important;
   width: var(--uc-sidebar-width) !important;
   max-width: var(--uc-sidebar-width) !important;
-  z-index:1;
+  z-index: var(--browser-area-z-index-sidebar,3);
 }
-
 #sidebar-box[positionend]{ direction: rtl }
 #sidebar-box[positionend] > *{ direction: ltr }
 
 #sidebar-box[positionend]:-moz-locale-dir(rtl){ direction: ltr }
 #sidebar-box[positionend]:-moz-locale-dir(rtl) > *{ direction: rtl }
 
-#main-window[sizemode="fullscreen"] #sidebar-box{ --uc-sidebar-width: 00px; }
+#main-window[sizemode="fullscreen"] #sidebar-box{ --uc-sidebar-width: 1px; }
 
 #sidebar-splitter{ display: none }
 
@@ -290,119 +87,128 @@ See the above repository for updates as well as full license text. */
   border-left-style: solid !important; 
 }
 
-/* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/floating_findbar_on_top.css made available under Mozilla Public License v. 2.0
+/* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/autohide_sidebar.css made available under Mozilla Public License v. 2.0
 See the above repository for updates as well as full license text. */
 
-/* This style makes findbar appear as floating box at the top-left of the content area.
- * If you want the findbar on right side instead then create a new pref
- * userchrome.floating-findbar-on-right.enabled and set it to true and restart Firefox
- * 
- * Note that privacy.resistFingerprinting.letterboxing prevents this from working properly
- */
+/* Show sidebar only when the cursor is over it  */
+/* The border controlling sidebar width will be removed so you'll need to modify these values to change width */
 
-findbar{
-  order: -1;
-  margin-bottom: -33px;
+#sidebar-box{
+  --uc-sidebar-width: 40px;
+  --uc-sidebar-hover-width: 210px;
+  --uc-autohide-sidebar-delay: 600ms; /* Wait 0.6s before hiding sidebar */
+  --uc-autohide-transition-duration: 115ms;
+  --uc-autohide-transition-type: linear;
+  --browser-area-z-index-sidebar: 3;
   position: relative;
-  border-top: none !important;
-  padding: 0 !important;
-  transition: transform 82ms linear, opacity 82ms linear 32ms !important;
-  background: none !important;
-  pointer-events: none;
-  z-index: 1;
-  white-space: nowrap;
+  min-width: var(--uc-sidebar-width) !important;
+  width: var(--uc-sidebar-width) !important;
+  max-width: var(--uc-sidebar-width) !important;
+  z-index: var(--browser-area-z-index-sidebar,3);
 }
+#sidebar-box[positionend]{ direction: rtl }
+#sidebar-box[positionend] > *{ direction: ltr }
 
-.findbar-container > .findbar-find-fast{
-  padding: var(--toolbarbutton-inner-padding) 1px;
-  margin: 0 !important;
-}
+#sidebar-box[positionend]:-moz-locale-dir(rtl){ direction: ltr }
+#sidebar-box[positionend]:-moz-locale-dir(rtl) > *{ direction: rtl }
 
-findbar[hidden]{ transform: translateY(-30px);}
+#main-window[sizemode="fullscreen"] #sidebar-box{ --uc-sidebar-width: 1px; }
 
-findbar > .findbar-container,
-findbar > .close-icon{
-  border: 1px solid var(--chrome-content-separator-color);
-  border-width: 0 0 1px 0px;
-  background-color: var(--lwt-accent-color) !important;
-  background-image: linear-gradient(var(--toolbar-bgcolor),var(--toolbar-bgcolor)),var(--lwt-header-image,none);
-  pointer-events: auto;
-}
+#sidebar-splitter{ display: none }
 
-findbar > .findbar-container{
-  border-bottom-right-radius: 4px;
-  border-right-width: 1px;
-  height: initial !important;
-  margin-inline: 0px !important;
-  overflow-inline: visible !important;
-}
-
-.findbar-find-status{
-  display: flex;
+#sidebar-header{
   overflow: hidden;
-  text-overflow: ellipsis;
-  flex-grow: 1;
+  color: var(--chrome-color, inherit) !important;
+  padding-inline: 0 !important;
 }
- 
-.findbar-closebutton{
-  margin: 0 !important;
-  border-radius: 0 !important;
-  padding: 5px !important;
-  width: initial !important;
-  order: -1;
-}
-.findbar-closebutton > image{ padding: 3px }
-.findbar-closebutton:hover > image{
-  background: var(--toolbarbutton-hover-background) !important;
-  border-radius: 4px
-}
-findbar > .findbar-container > hbox{ margin: 0 5px }
- 
-findbar::after{
-  content:"";
+
+#sidebar-header::before,
+#sidebar-header::after{
+  content: "";
   display: flex;
-  flex-grow: 100;
-} 
-
-@media (-moz-bool-pref: "userchrome.floating-findbar-on-right.enabled"){
-  findbar{
-    flex-direction: row-reverse;
-  }
-  findbar > .findbar-container{
-    flex-direction: row-reverse;
-    border-inline-width: 1px 0px;
-    border-bottom-right-radius: 0px;
-    border-bottom-left-radius: 4px;
-  }
-  /*
-  Move findbar so it isn't over the scrollbar
-  Delete if you want findbar to begin from right window edge
-  */
-  findbar{
-    margin-right: 16px;
-    border-right: 1px solid var(--chrome-content-separator-color);
-  }
+  padding-left: 8px;
 }
 
-@supports -moz-bool-pref("userchrome.floating-findbar-on-right.enabled"){
-  findbar{
-    flex-direction: row-reverse;
-  }
-  findbar > .findbar-container{
-    flex-direction: row-reverse;
-    border-inline-width: 1px 0px;
-    border-bottom-right-radius: 0px;
-    border-bottom-left-radius: 4px;
-  }
-  /*
-  Move findbar so it isn't over the scrollbar
-  Delete if you want findbar to begin from right window edge
-  */
-  findbar{
-    margin-right: 16px;
-    border-right: 1px solid var(--chrome-content-separator-color);
-  }
+#sidebar-header,
+#sidebar{
+  transition: min-width var(--uc-autohide-transition-duration) var(--uc-autohide-transition-type) var(--uc-autohide-sidebar-delay) !important;
+  min-width: var(--uc-sidebar-width) !important;
+  will-change: min-width;
 }
+#sidebar-box:hover > #sidebar-header,
+#sidebar-box:hover > #sidebar{
+  min-width: var(--uc-sidebar-hover-width) !important;
+  transition-delay: 0ms !important;
+}
+
+.sidebar-panel{
+  background-color: transparent !important;
+  color: var(--newtab-text-primary-color) !important;
+}
+
+.sidebar-panel #search-box{
+  -moz-appearance: none !important;
+  background-color: rgba(249,249,250,0.1) !important; 
+  color: inherit !important;
+}
+
+/* Add sidebar divider and give it background */
+
+#sidebar,
+#sidebar-header{
+  background-color: inherit !important;
+  border-inline: 1px solid rgb(80,80,80);
+  border-inline-width: 0px 1px;
+}
+
+#sidebar-box:not([positionend]) > :-moz-locale-dir(rtl),
+#sidebar-box[positionend] > *{
+  border-inline-width: 1px 0px;
+}
+
+/* Move statuspanel to the other side when sidebar is hovered so it doesn't get covered by sidebar */
+
+#sidebar-box:not([positionend]):hover ~ #appcontent #statuspanel{
+  inset-inline: auto 0px !important;
+}
+#sidebar-box:not([positionend]):hover ~ #appcontent #statuspanel-label{
+  margin-inline: 0px !important;
+  border-left-style: solid !important; 
+}
+
+/* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/menubar_in_main_toolbar.css made available under Mozilla Public License v. 2.0
+See the above repository for updates as well as full license text. */
+
+/* Make menubar permanently enabled or this isn't going to work */
+
+#navigator-toolbox{ --uc-menubar-height: 34px; }
+:root[uidensity="compact"] #navigator-toolbox{ --uc-menubar-height: 30px }
+
+#titlebar{
+  flex-direction: column-reverse;
+  -moz-appearance: none !important;
+}
+
+#toolbar-menubar{
+  margin-bottom: calc(0px - var(--uc-menubar-height));
+  height: var(--uc-menubar-height);
+  position: relative;
+  z-index: 2;
+  pointer-events: none;
+}
+
+#menubar-items{
+  justify-content: center;
+  pointer-events: initial;
+  margin-top: 3px;
+  color: var(--toolbar-color);
+}
+/* Adjust to fit menubar items - 300px works for English locale */
+#nav-bar{ padding-left: 300px; }
+
+#toolbar-menubar > .titlebar-buttonbox-container{ display: none }
+:root:is([tabsintitlebar],[customtitlebar])[sizemode="normal"] .titlebar-spacer,
+:root:is([tabsintitlebar],[customtitlebar]) #TabsToolbar > .titlebar-buttonbox-container{ display: flex !important; }
 
 /* ~~~~~~~~ Hidden elements styles ~~~~~~~~~ */
 #sidebar-header {
